--- a/detailed-gpt-from-scratch.html
+++ b/detailed-gpt-from-scratch.html
@@ -20,7 +20,7 @@
     <script>hljs.highlightAll();</script>
 
     <pre>
-        <code>
+        <code class="language-html">
            <html>
                <head>
                </head>
