some more pages

--- a/detailed-gpt-from-scratch.html
+++ b/detailed-gpt-from-scratch.html
@@ -15,6 +15,14 @@
     </script>
 </head>
 <body>
+    <header class="main-header">
+        <nav class="main-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
     <!-- Your content goes here -->
     <div class="main-content">
         <h1>Building GPT from scratch in extended details</h1>
